// Vitest Snapshot v1

exports[`with comment 1`] = `
{
  "numFailedTestSuites": 0,
  "numFailedTests": 1,
  "numPassedTestSuites": 3,
  "numPassedTests": 8,
  "numPendingTestSuites": 0,
  "numPendingTests": 0,
  "numTodoTests": 1,
  "numTotalTestSuites": 3,
  "numTotalTests": 9,
  "startTime": 1742587001759,
  "success": false,
  "testResults": [
    {
      "assertionResults": [
        {
          "ancestorTitles": [
            "suite",
            "inner suite",
          ],
          "duration": 1.4422860145568848,
          "failureMessages": [
            "expected 2.23606797749979 to equal 2",
          ],
          "fullName": "suite inner suite Math.sqrt()",
          "location": {
            "column": 9,
            "line": 10,
          },
          "status": "failed",
          "title": "Math.sqrt()",
        },
        {
          "ancestorTitles": [
            "suite",
          ],
          "duration": 1.0237109661102295,
          "failureMessages": [],
          "fullName": "suite JSON",
          "status": "passed",
          "title": "JSON",
        },
        {
          "ancestorTitles": [
            "suite",
          ],
          "failureMessages": [],
          "fullName": "suite async with timeout",
          "status": "skipped",
          "title": "async with timeout",
        },
        {
          "ancestorTitles": [
            "suite",
          ],
          "duration": 100.50598406791687,
          "failureMessages": [],
          "fullName": "suite timeout",
          "status": "passed",
          "title": "timeout",
        },
        {
          "ancestorTitles": [
            "suite",
          ],
          "duration": 20.184875011444092,
          "failureMessages": [],
          "fullName": "suite callback setup success ",
          "status": "passed",
          "title": "callback setup success ",
        },
        {
          "ancestorTitles": [
            "suite",
          ],
          "duration": 0.33245420455932617,
          "failureMessages": [],
          "fullName": "suite callback test success ",
          "status": "passed",
          "title": "callback test success ",
        },
        {
          "ancestorTitles": [
            "suite",
          ],
          "duration": 19.738605976104736,
          "failureMessages": [],
          "fullName": "suite callback setup success done(false)",
          "status": "passed",
          "title": "callback setup success done(false)",
        },
        {
          "ancestorTitles": [
            "suite",
          ],
          "duration": 0.1923508644104004,
          "failureMessages": [],
          "fullName": "suite callback test success done(false)",
          "status": "passed",
          "title": "callback test success done(false)",
        },
        {
          "ancestorTitles": [
            "suite",
          ],
          "failureMessages": [],
          "fullName": "suite todo test",
          "status": "todo",
          "title": "todo test",
        },
      ],
      "endTime": 1742587001759,
      "message": "",
      "name": "/vitest/test/core/test/basic.test.ts",
      "startTime": 1742587001759,
      "status": "failed",
    },
  ],
}
`;

exports[`without comment 1`] = `
{
  "numFailedTestSuites": 0,
  "numFailedTests": 1,
  "numPassedTestSuites": 3,
  "numPassedTests": 8,
  "numPendingTestSuites": 0,
  "numPendingTests": 0,
  "numTodoTests": 1,
  "numTotalTestSuites": 3,
  "numTotalTests": 9,
  "startTime": 1642587001759,
  "success": false,
  "testResults": [
    {
      "assertionResults": [
        {
          "ancestorTitles": [
            "suite",
            "inner suite",
          ],
          "duration": 1.4422860145568848,
          "failureMessages": [
            "expected 2.23606797749979 to equal 2",
          ],
          "fullName": "suite inner suite Math.sqrt()",
          "location": {
            "column": 9,
            "line": 8,
          },
          "status": "failed",
          "title": "Math.sqrt()",
        },
        {
          "ancestorTitles": [
            "suite",
          ],
          "duration": 1.0237109661102295,
          "failureMessages": [],
          "fullName": "suite JSON",
          "status": "passed",
          "title": "JSON",
        },
        {
          "ancestorTitles": [
            "suite",
          ],
          "failureMessages": [],
          "fullName": "suite async with timeout",
          "status": "skipped",
          "title": "async with timeout",
        },
        {
          "ancestorTitles": [
            "suite",
          ],
          "duration": 100.50598406791687,
          "failureMessages": [],
          "fullName": "suite timeout",
          "status": "passed",
          "title": "timeout",
        },
        {
          "ancestorTitles": [
            "suite",
          ],
          "duration": 20.184875011444092,
          "failureMessages": [],
          "fullName": "suite callback setup success ",
          "status": "passed",
          "title": "callback setup success ",
        },
        {
          "ancestorTitles": [
            "suite",
          ],
          "duration": 0.33245420455932617,
          "failureMessages": [],
          "fullName": "suite callback test success ",
          "status": "passed",
          "title": "callback test success ",
        },
        {
          "ancestorTitles": [
            "suite",
          ],
          "duration": 19.738605976104736,
          "failureMessages": [],
          "fullName": "suite callback setup success done(false)",
          "status": "passed",
          "title": "callback setup success done(false)",
        },
        {
          "ancestorTitles": [
            "suite",
          ],
          "duration": 0.1923508644104004,
          "failureMessages": [],
          "fullName": "suite callback test success done(false)",
          "status": "passed",
          "title": "callback test success done(false)",
        },
        {
          "ancestorTitles": [
            "suite",
          ],
          "failureMessages": [],
          "fullName": "suite todo test",
          "status": "todo",
          "title": "todo test",
        },
      ],
      "endTime": 1642587001759,
      "message": "",
      "name": "/vitest/test/core/test/basic.test.ts",
      "startTime": 1642587001759,
      "status": "failed",
    },
  ],
}
`;
